--- a/Main/assets/titulo.css
+++ b/Main/assets/titulo.css
@@ -2,9 +2,17 @@
     height: 60px;
     line-height: 60px;
     border-bottom: thin lightgrey solid;
-}
-
-.app-header .app-header--title {
+    background-color: #006400;
+    color: #fff;
+    margin-right: 20px;
+    margin-left: 20px;
+    border-radius: 10px;
+  }
+  
+  .app-header--title {
     font-size: 22px;
     padding-left: 5px;
-}
+    border-radius: 5px;
+    background-color: #fff;
+    color: #006400;
+  }
